# calorie-tracker

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
.forgejo/workflows/: build.yaml  check.yaml
migrations/2026-03-10-214153-0000_users/: up.sql
nix/: buildInputs.nix  pkg.nix  wasm-bindgen-cli_0_2_114.nix
src/: main.rs
src/client/: app.rs  mod.rs  utils.rs
src/client/assets/css/: base.css  base.scss  variables.css  variables.scss
src/client/assets/css/application/: start.css
src/client/assets/css/application/consumables/: add.css  manage.css  render_consumable_row.css
src/client/assets/css/components/: blackout.css  button.css  dialog.css  select.css  sidebar.css  siteoverlay.css  spinner.css  text_box.css  text_box.scss
src/client/assets/css/user/: create.css
src/client/components/: blackout.rs  button.rs  dialog.rs  mod.rs  select.rs  sidebar.rs  siteoverlay.rs  spacer.rs  spinner.rs  text_box.rs
src/client/routes/: landing.rs  mod.rs
src/client/routes/application/: mod.rs
src/client/routes/application/consumables/: add.rs  manage.rs  mod.rs  modify.rs  show_consumable.rs
src/client/routes/application/consumption/: add.rs  manage.rs
src/client/routes/application/start/: comp.rs  mod.rs
src/client/routes/user/: create.rs  login.rs
src/components/: mod.rs
src/dtos/: create_user.rs  mod.rs
src/dtos/consumable/: definition.rs  nutritions.rs
src/dtos/consumption/: consumption_type.rs  definition.rs  mod.rs
src/dtos/food/: definition.rs  mod.rs  nutritions.rs
src/server/: entry.rs  get_text.rs  mod.rs
src/server/database/: mod.rs  schema.rs
src/server/database/models/: login_token.rs  mod.rs  user.rs
src/server/database/models/consumables/: definition.rs  get.rs  into_consumable.rs  mod.rs  save.rs
src/server/dtos/: login_user.rs
src/server/dtos/food/: definition.rs  nutritions.rs
src/server/layers/: authenticated.rs
src/server/routes/v1/user/: create.rs  login.rs  mod.rs
src/server/routes/v1/user/consumables/: create.rs  get.rs  mod.rs  save.rs
src/server/routes/v1/user/is_authed/: error.rs  mod.rs  route.rs
