[package]
name = "calorie-tracker"
version = "0.1.0"
authors = ["DestinyofYeet <ole@ole.blue>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", optional = true, features = ["std"] }
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus_style = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
django-rs = { git = "https://code.ole.blue/DestinyofYeet/django-rs.git", optional = true}
uuid = { version = "1.23.1", features = ["v4"], optional = true }
tower-cookies = "0.11.0"
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-icons = { version = "0.1.0", default-features = false }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:argon2", "dep:django-rs", "dep:uuid"]
argon2 = ["dep:argon2"]
uuid = ["dep:uuid"]

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
lto = true
